--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,54 +3,54 @@
   text-decoration: underline;
 }
 
-.transBackActeffect, .Header > .menuButton {
+.transBackActEffect, .Header > .menu input {
   -webkit-transition: background-color 150ms;
   transition: background-color 150ms;
 }
 
-.transBackActeffect:enabled:active, .Header > .menuButton:enabled:active {
+.transBackActEffect:enabled:active, .Header > .menu input:enabled:active {
   background-color: rgba(0, 0, 0, 0.025) !important;
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .transBackActeffect:enabled:hover, .Header > .menuButton:enabled:hover {
+  .transBackActEffect:enabled:hover, .Header > .menu input:enabled:hover {
     background-color: rgba(0, 0, 0, 0.025) !important;
   }
-  .transBackActeffect:enabled:focus, .Header > .menuButton:enabled:focus {
+  .transBackActEffect:enabled:focus, .Header > .menu input:enabled:focus {
     background-color: rgba(0, 0, 0, 0.035) !important;
   }
-  .transBackActeffect:enabled:active, .Header > .menuButton:enabled:active {
+  .transBackActEffect:enabled:active, .Header > .menu input:enabled:active {
     background-color: rgba(0, 0, 0, 0.045) !important;
   }
 }
 
-.transBackActeffect:disabled, .Header > .menuButton:disabled {
+.transBackActEffect:disabled, .Header > .menu input:disabled {
   opacity: 0.5;
   cursor: default;
 }
 
-.colorBackActeffect {
+.colorBackActEffect {
   -webkit-transition: -webkit-filter 100ms;
   transition: -webkit-filter 100ms;
   transition: filter 100ms;
   transition: filter 100ms, -webkit-filter 100ms;
 }
 
-.colorBackActeffect:active {
+.colorBackActEffect:active {
   -webkit-filter: brightness(95%);
           filter: brightness(95%);
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .colorBackActeffect:hover {
+  .colorBackActEffect:hover {
     -webkit-filter: brightness(95%);
             filter: brightness(95%);
   }
-  .colorBackActeffect:focus {
+  .colorBackActEffect:focus {
     -webkit-filter: brightness(90%);
             filter: brightness(90%);
   }
-  .colorBackActeffect:active {
+  .colorBackActEffect:active {
     -webkit-filter: brightness(85%);
             filter: brightness(85%);
   }
@@ -80,15 +80,15 @@
   cursor: text;
 }
 
-.darkThinScrollbar::-webkit-scrollbar {
+.darkThinScrollbar::-webkit-scrollbar, .notTouchScreen::-webkit-scrollbar, .notTouchScreen ::-webkit-scrollbar {
   width: 7px;
 }
 
-.darkThinScrollbar::-webkit-scrollbar-track {
+.darkThinScrollbar::-webkit-scrollbar-track, .notTouchScreen::-webkit-scrollbar-track, .notTouchScreen ::-webkit-scrollbar-track {
   background: transparent;
 }
 
-.darkThinScrollbar::-webkit-scrollbar-thumb {
+.darkThinScrollbar::-webkit-scrollbar-thumb, .notTouchScreen::-webkit-scrollbar-thumb, .notTouchScreen ::-webkit-scrollbar-thumb {
   background: #c4c4c4;
   border-radius: 20px;
 }
@@ -106,64 +106,6 @@
   border-radius: 20px;
 }
 
-.noneTouchScreen .lightThinScrollbar::-webkit-scrollbar {
-  width: 3px;
-}
-
-.noneTouchScreen .lightThinScrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.noneTouchScreen .lightThinScrollbar::-webkit-scrollbar-thumb {
-  background: #CCC;
-  border-radius: 20px;
-}
-
-.noneTouchScreen .lightThickHiddenScrollbar::-webkit-scrollbar {
-  width: 7px;
-  -webkit-transition: all 200ms;
-  transition: all 200ms;
-}
-
-.noneTouchScreen .lightThickHiddenScrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.noneTouchScreen .lightThickHiddenScrollbar::-webkit-scrollbar-thumb {
-  background-color: transparent;
-  border-radius: 20px;
-}
-
-.noneTouchScreen .lightThickHiddenScrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #CCC;
-}
-
-.noneTouchScreen .darkThickScrollbar::-webkit-scrollbar {
-  width: 6px;
-}
-
-.noneTouchScreen .darkThickScrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.noneTouchScreen .darkThickScrollbar::-webkit-scrollbar-thumb {
-  background: #C2C2C2;
-  border-radius: 20px;
-}
-
-.noneTouchScreen .darkSuperThinScrollbar::-webkit-scrollbar {
-  width: 1px;
-}
-
-.noneTouchScreen .darkSuperThinScrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.noneTouchScreen .darkSuperThinScrollbar::-webkit-scrollbar-thumb {
-  background: #BBB;
-  border-radius: 20px;
-}
-
 .noScrollbar::-webkit-scrollbar {
   width: 0;
 }
@@ -171,17 +113,13 @@
 .customRange {
   width: 100%;
   -webkit-appearance: none;
-  /* Hides the slider so that custom slider can be made */
   width: 100%;
-  /* Specific width is required for Firefox. */
   background: transparent;
-  /* Otherwise white in Chrome */
   border: none;
 }
 
 .customRange:focus {
   outline: none;
-  /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
 }
 
 .customRange::-webkit-slider-thumb {
@@ -262,62 +200,99 @@
 }
 
 .Header {
+  height: 58px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.Header > .logoWrapper {
+.Header > .appNameWrapper {
+  padding-right: 8px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.Header > .logoWrapper > .logo {
-  width: 38px;
-  height: 38px;
-  padding-right: 20px;
-  background: #027 url(/src/icons/logo.svg) no-repeat center/25px auto;
-  border-radius: 6px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  -ms-border-radius: 6px;
-}
-
-.Header > .logoWrapper > .titleWrapper > .title {
-  margin: 0;
-  font-size: 3.2rem;
+.Header > .appNameWrapper > .name {
+  padding-bottom: 8px;
+  font-size: 4.4rem;
   font-weight: normal;
-}
-
-.Header > .logoWrapper > .titleWrapper > .title > a {
-  display: inline-block;
-  height: 38px;
-  padding-left: 16px;
-  padding-right: 10px;
-  line-height: 38px;
   color: #027;
+  margin: 0;
 }
 
-.Header > .logoWrapper > .titleWrapper > .description {
-  padding-left: 16px;
-  font-size: 1.6rem;
+.Header > .appNameWrapper > .description {
+  width: 130px;
+  padding: 0 0 0 12px;
+  border-left: solid 2px #cacaca;
+  font-size: 1.4rem;
+  line-height: 20px;
   font-weight: normal;
   color: #999;
-  margin: 5px 0 0 0;
+  margin: 0 0 0 14px;
 }
 
-.Header > .menuButton {
+.Header > .menu {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -webkit-box-flex: 0;
+      -ms-flex: 0;
+          flex: 0;
+}
+
+.Header > .menu input {
   width: 50px;
   height: 50px;
-  margin-right: -8px;
   border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  background: transparent url(/src/icons/menu.svg) no-repeat center/27px auto;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.Header > .menu > .backButton {
+  margin-left: -17px;
+  background-image: url(/src/icons/left_111.svg);
+  background-size: 27px auto;
+  display: none;
+}
+
+.Header > .menu > .endButtonsContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+}
+
+.Header > .menu > .endButtonsContainer > .lightButton {
+  background-image: url(/src/icons/lightMode_fff.svg);
+  background-size: 24px auto;
+  display: none;
+}
+
+.Header > .menu > .endButtonsContainer > .darkButton {
+  background-image: url(/src/icons/moon_111.svg);
+  background-size: 24px auto;
+  display: none;
+}
+
+.Header > .menu > .endButtonsContainer > .menuButton {
+  margin-right: -13px;
+  background-image: url(/src/icons/menu_222.svg);
+  background-size: 28px;
 }
 /*# sourceMappingURL=Header.css.map */
