--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -3,54 +3,54 @@
   text-decoration: underline;
 }
 
-.transBackActeffect {
+.transBackActEffect {
   -webkit-transition: background-color 150ms;
   transition: background-color 150ms;
 }
 
-.transBackActeffect:enabled:active {
+.transBackActEffect:enabled:active {
   background-color: rgba(0, 0, 0, 0.025) !important;
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .transBackActeffect:enabled:hover {
+  .transBackActEffect:enabled:hover {
     background-color: rgba(0, 0, 0, 0.025) !important;
   }
-  .transBackActeffect:enabled:focus {
+  .transBackActEffect:enabled:focus {
     background-color: rgba(0, 0, 0, 0.035) !important;
   }
-  .transBackActeffect:enabled:active {
+  .transBackActEffect:enabled:active {
     background-color: rgba(0, 0, 0, 0.045) !important;
   }
 }
 
-.transBackActeffect:disabled {
+.transBackActEffect:disabled {
   opacity: 0.5;
   cursor: default;
 }
 
-.colorBackActeffect {
+.colorBackActEffect {
   -webkit-transition: -webkit-filter 100ms;
   transition: -webkit-filter 100ms;
   transition: filter 100ms;
   transition: filter 100ms, -webkit-filter 100ms;
 }
 
-.colorBackActeffect:active {
+.colorBackActEffect:active {
   -webkit-filter: brightness(95%);
           filter: brightness(95%);
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .colorBackActeffect:hover {
+  .colorBackActEffect:hover {
     -webkit-filter: brightness(95%);
             filter: brightness(95%);
   }
-  .colorBackActeffect:focus {
+  .colorBackActEffect:focus {
     -webkit-filter: brightness(90%);
             filter: brightness(90%);
   }
-  .colorBackActeffect:active {
+  .colorBackActEffect:active {
     -webkit-filter: brightness(85%);
             filter: brightness(85%);
   }
@@ -201,8 +201,7 @@
 
 .Chart {
   width: 100%;
-  height: 195px;
-  margin-top: 60px;
+  height: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -211,7 +210,7 @@
 .Chart > .verticalColum {
   height: 100%;
   padding-right: 5px;
-  padding-bottom: 23px;
+  padding-bottom: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -231,7 +230,7 @@
   font-size: 1.4rem;
 }
 
-.Chart > .columsWrapper {
+.Chart > .columnsWrapper {
   height: 100%;
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -244,7 +243,7 @@
           justify-content: space-between;
 }
 
-.Chart > .columsWrapper > .barWrapper {
+.Chart > .columnsWrapper > .barWrapper {
   width: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -258,8 +257,9 @@
           justify-content: end;
 }
 
-.Chart > .columsWrapper > .barWrapper > a {
+.Chart > .columnsWrapper > .barWrapper > a {
   width: 100%;
+  padding-bottom: 2px;
   text-align: center;
   font-size: 1.4rem;
   color: #bbb;
@@ -271,7 +271,7 @@
           justify-content: center;
 }
 
-.Chart > .columsWrapper > .barWrapper > a > span {
+.Chart > .columnsWrapper > .barWrapper > a > span {
   width: 27px;
   padding-top: 5px;
   border-radius: 5px;
@@ -283,15 +283,11 @@
   transition: all 0.5s ease;
 }
 
-.Chart > .columsWrapper > .barWrapper > a > span.tallest {
+.Chart > .columnsWrapper > .barWrapper > a > span.tallest {
   background-color: #a25;
 }
 
-.Chart > .columsWrapper > .barWrapper > a > span.lowest {
-  background-color: #5a5;
-}
-
-.Chart > .columsWrapper > .barWrapper > a:nth-child(2) {
+.Chart > .columnsWrapper > .barWrapper > a:nth-child(2) {
   display: block;
   text-align: center;
   margin-top: 7px;
