--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -3,13 +3,12 @@
 
 .Chart{
     width: 100%;
-    height: 195px;
-    margin-top: 60px;
+    height: 200px;
     display: flex;
     > .verticalColum{
         height: 100%;
         padding-right: 5px;
-        padding-bottom: 23px;
+        padding-bottom: 25px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -21,7 +20,7 @@
             @extend .threeDotsOverflow;
         }
     }
-    > .columsWrapper{
+    > .columnsWrapper{
         height: 100%;
         flex: 1;
         display: flex;
@@ -33,6 +32,7 @@
             justify-content: end;
             > a{
                 width: 100%;
+                padding-bottom: 2px;
                 text-align: center;
                 font-size: 1.4rem;
                 color: #bbb;
@@ -47,9 +47,6 @@
                 }
                 > span.tallest{
                     background-color: #a25;
-                }
-                > span.lowest{
-                    background-color: #5a5;//todo?
                 }
             }
             > a:nth-child(2){
