--- a/src/components/RangeInput/RangeInput.scss
+++ b/src/components/RangeInput/RangeInput.scss
@@ -3,7 +3,7 @@
 .RangeInput{
     width: 100%;
     height: auto;
-    max-height: 100px;//for transition
+    max-height: 100px;
     margin-top: 35px;
     position: relative;
     overflow: hidden;
@@ -50,7 +50,7 @@
             }
         }
         > .rangeInput{
-            @extend .customRange;
+            @extend .customRange_light;
             margin: 0;
         }
         > .rangeInfoWrapper{
@@ -116,15 +116,181 @@
     }
 }
 
-//mobile:
-@media screen and (max-width: 1000px){
+//dark mode:
+.darkMode{
     .RangeInput{
         > .content{
+            > .title{
+                color: #afafaf;
+            }
             > .valueWrapper{
+                > .unit{
+                    color: #ddd;
+                }
                 > .textInput{
-                    font-size: 2.9rem;
+                    color: #ddd;
+                }
+                > .comment{
+                    color: #afafaf;
+                }
+            }
+            > .rangeInput{
+                @extend .customRange_dark;
+                margin: 0;
+            }
+            > .rangeInfoWrapper{
+                width: 100%;
+                padding-top: 3px;
+                display: flex;
+                justify-content: space-between;
+                > a{
+                    font-size: 1.3rem;
+                    color: #bbb;
                 }
             }
         }
     }
+    
+    //in settings:
+    .RangeInput.settings{
+        > .content{
+            > .title{
+                color: #ddd;
+            }
+            > .valueWrapper{
+                > .textInput{
+                    width: 50px;
+                    font-size: 2.1rem;
+                }
+            }
+            > .rangeInfoWrapper{
+                display: none;
+            }
+        }
+    }
+    
+}
+
+
+/*
+    custom range input:
+*/
+
+//customRange_light:
+.customRange_light{
+    width: 100%;
+    -webkit-appearance: none; // hides the slider so that custom slider can be made */
+    width: 100%;              // specific width is required for Firefox. */
+    background: transparent;  // otherwise white in Chrome */
+    border: none
+}
+.customRange_light:focus{
+    outline: none; // removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+.customRange_light::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    height: 16px;
+    width: 16px;
+    background-color: white;
+    border: 2px solid #027;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-top: -7px; // you need to specify a margin in Chrome, but in Firefox and IE it is automatic
+}
+.customRange_light::-moz-range-thumb{
+    height: 12px;
+    width: 12px;
+    background-color: white;
+    border: 2px solid #027;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.customRange_light::-ms-thumb{
+    height: 16px;
+    width: 16px;
+    background-color: white;
+    border: 2px solid #027;
+    border-radius: 50%;
+    cursor: pointer;
+}
+//the track:
+.customRange_light::-webkit-slider-runnable-track{
+    width: 100%;
+    height: 12px;
+    cursor: pointer;
+    border-top: solid 5px white;
+    border-bottom: solid 5px white;
+    margin-top: -1px;
+    margin-bottom: -1px;
+}
+.customRange_light::-moz-range-track{
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    background: transparent;
+    border-top: solid 8px white;
+    border-bottom: solid 8px white;
+}
+.customRange_light::-ms-track{
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    background: transparent;
+    border-top: solid 5px white;
+    border-bottom: solid 5px white;
+    border-color: transparent;
+    color: transparent;
+}
+.customRange_light::-ms-fill-lower{
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    background: transparent;
+    border-top: solid 5px white;
+    border-bottom: solid 5px white;
+}
+.customRange_light::-ms-fill-upper{
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    background: transparent;
+    border-top: solid 5px white;
+    border-bottom: solid 5px white;
+}
+
+//customRange_dark:
+.customRange_dark{
+    @extend .customRange_light;
+}
+.customRange_dark::-webkit-slider-thumb{
+    background-color: #000b23;
+    border: 2px solid #ddd;
+}
+.customRange_dark::-moz-range-thumb{
+    background-color: #000b23;
+    border: 2px solid #027;
+}
+.customRange_dark::-ms-thumb{
+    background-color: #000b23;
+    border: 2px solid #ddd;
+}
+.customRange_dark::-webkit-slider-runnable-track{
+    border-top: solid 5px #000b23;
+    border-bottom: solid 5px #000b23;
+}
+.customRange_dark::-moz-range-track{
+    border-top: solid 8px #000b23;
+    border-bottom: solid 8px #000b23;
+}
+.customRange_dark::-ms-track{
+    border-top: solid 5px #000b23;
+    border-bottom: solid 5px #000b23;
+}
+.customRange_dark::-ms-fill-lower{
+    border-top: solid 5px #000b23;
+    border-bottom: solid 5px #000b23;
+}
+.customRange_dark::-ms-fill-upper{
+    border-top: solid 5px #000b23;
+    border-bottom: solid 5px #000b23;
 }
